# liblogger

./: .gitignore  CMakeLists.txt  README.md  package.json
examples/: example.c
include/logger/: logger.h
src/: logger.c  logger.h
